--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <div class="main">
             <div class="left">
-                <h2><strong>Name:</strong> Md Oyasiul Islam</h2>
+                <h2>Personal</h2>
+                <p><strong>Name:</strong> Md Oyasiul Islam</p>
                 <p><strong>Age:</strong> 24</p>
                 <p><strong>Email:</strong> oyasiul.islam@dsinnovators.com</p>
                 <p><strong>Phone:</strong> 01775855448</p>
